--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "qs": "^6.11.1",
     "nextjs-progressbar": "^0.0.14",
     "postcss": "^8.4.16",
+    "axios": "^1.3.4",
+    "next-iron-session": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
