welp test one of directtly fetching the avatar

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+DISCORD_BOT_TOKEN=OTI1NzQwMzc2OTQ4NjA5MDM0.Gpf7cN.erHB-IRVcfKWkEpDrCF3VgHAcQKFUj1qv6DzfY
 DISCORD_CLIENT_SECRET=
 DISCORD_CLIENT_ID=
 DISCORD_REDIRECT_URI=
