--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-iron-session": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "3.3.1",
     "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.8"
   },
