--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-country-flag": "3.1.0",
     "react-ga": "3.3.1",
     "react-icons": "^4.4.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "react-chartjs-2": "5.2.0"
   },
   "devDependencies": {
     "eslint": "8.24.0",
