--- a/package.json
+++ b/package.json
@@ -22,11 +22,8 @@
     "next-iron-session": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-country-flag": "3.1.0",
-    "react-ga": "3.3.1",
     "react-icons": "^4.4.0",
-    "tailwindcss": "^3.1.8",
-    "react-chartjs-2": "5.2.0"
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "eslint": "8.24.0",
