--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "next-iron-session": "^4.2.0",
     "react": "18.2.0",
+    "node-fetch": "3.3.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.8"
