--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-fetch": "3.3.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "next-auth": "4.22.1",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
