--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "next-auth": "4.22.1",
+    "@react-three/fiber": "8.13.0",
+    "three": "0.152.2",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
