--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "next-auth": "4.22.1",
-    "styled-components": "6.0.0-rc.1",
+    "chart.js": "4.3.0",
+    "react-chartjs-2": "5.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
