--- a/package.json
+++ b/package.json
@@ -6,27 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier -w ./**/**/*.{ts,tsx,js,jsx}"
   },
   "dependencies": {
     "@replit/clui": "^0.0.7",
     "@replit/clui-input": "^0.0.18",
     "autoprefixer": "^10.4.12",
+    "axios": "^1.3.4",
+    "chart.js": "4.3.0",
     "framer-motion": "^7.3.6",
     "jquery": "^3.6.1",
     "next": "12.3.1",
-    "qs": "^6.11.1",
-    "nextjs-progressbar": "^0.0.14",
-    "postcss": "^8.4.16",
-    "axios": "^1.3.4",
+    "next-auth": "4.22.1",
     "next-iron-session": "^4.2.0",
-    "react": "18.2.0",
+    "nextjs-progressbar": "^0.0.14",
     "node-fetch": "3.3.1",
+    "postcss": "^8.4.16",
+    "prettier": "^3.0.3",
+    "qs": "^6.11.1",
+    "react": "18.2.0",
+    "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "next-auth": "4.22.1",
-    "chart.js": "4.3.0",
-    "react-chartjs-2": "5.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
