--- a/package.json
+++ b/package.json
@@ -1,38 +1,53 @@
 {
-  "name": "topic-admin-next",
-  "version": "0.1.0",
+  "name": "topic-admin",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "format": "prettier -w ./**/**/*.{ts,tsx,js,jsx}"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "5.11.16",
+    "@mui/material": "5.13.5",
+    "@next/bundle-analyzer": "^14.1.0",
     "@replit/clui": "^0.0.7",
     "@replit/clui-input": "^0.0.18",
-    "autoprefixer": "^10.4.12",
     "axios": "^1.3.4",
+    "chakra-ui": "^0.3.9",
     "chart.js": "4.3.0",
     "framer-motion": "^7.3.6",
     "jquery": "^3.6.1",
-    "next": "12.3.1",
+    "js-cookie": "^3.0.5",
+    "next": "^14.1.0",
     "next-auth": "4.22.1",
     "next-iron-session": "^4.2.0",
+    "next-pwa": "^5.6.0",
     "nextjs-progressbar": "^0.0.14",
     "node-fetch": "3.3.1",
-    "postcss": "^8.4.16",
     "prettier": "^3.0.3",
     "qs": "^6.11.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "replit": "^0.3.1",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "typescript": "^5"
   }
 }
