--- a/package.json
+++ b/package.json
@@ -9,12 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.19",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "5.11.16",
-    "@mui/material": "5.13.5",
     "@next/bundle-analyzer": "^14.1.0",
     "@replit/clui": "^0.0.7",
     "@replit/clui-input": "^0.0.18",
@@ -22,11 +16,10 @@
     "chakra-ui": "^0.3.9",
     "chart.js": "4.3.0",
     "framer-motion": "^7.3.6",
+    "isomorphic-unfetch": "^4.0.2",
     "jquery": "^3.6.1",
     "js-cookie": "^3.0.5",
-    "next": "^14.1.0",
-    "next-auth": "4.22.1",
-    "next-iron-session": "^4.2.0",
+    "next": "latet",
     "next-pwa": "^5.6.0",
     "nextjs-progressbar": "^0.0.14",
     "node-fetch": "3.3.1",
@@ -37,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "replit": "^0.3.1",
+    "swr": "^2.2.5",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.1.8"
   },
