--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "chart.js": "4.3.0",
     "framer-motion": "^7.3.6",
     "isomorphic-unfetch": "^4.0.2",
-    "jquery": "^3.6.1",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
-    "next": "latet",
+    "next": "^14.1.2",
     "next-pwa": "^5.6.0",
     "nextjs-progressbar": "^0.0.14",
     "node-fetch": "3.3.1",
